ensure title does not overlap

--- a/content/assets/common.css
+++ b/content/assets/common.css
@@ -79,6 +79,7 @@ header {
 .post-title {
     margin-bottom: 0.2em;
     font-size: 2em;
+    line-height: 1.1em;
 }
 
 #post-meta {
